# cmblensplus

./: .gitignore  LICENCE  MAKEALL.sh  README.md  install.sh  meson.build  meson_options.txt  project.toml  pyproject.toml  setup.py  test.sh
.github/workflows/: macos-import-test.yml
F90/pub/: .gitignore  install.sh  installguide
F90/src_dft/: Makefile  fft_kernels.f90  fftw.f90  remap.f90
F90/src_hp/: Makefile  hp_bsp.f90  hp_bsp.mod  hp_cgd.f90  hp_cgd.mod  hp_spht.f90  hp_spht.mod  hp_udgrade.f90  hp_udgrade.mod  hp_utils.f90  hp_utils.mod  spht.f90
F90/src_matrix/: Makefile  blas.f90  lapack.f90  lapack95.f90
F90/src_notused/: anaflat.f90  apsold.f90  bhe.f90  inp.f90  inpcurv.f90
F90/src_utils/: Makefile  alflat.f90  alkernel.f90  alkernel.mod  bb_flat.mod  bstool.f90  bstool.mod  constants.f90  constants.mod  cosmofunc.f90  cosmofunc.mod  delensing.f90  delensing.mod  funcs.f90  funcs.mod  general.f90  general.mod  grid2d.f90  grid2d.mod  io.mod  norm_flat.mod  pstool.f90  pstool.mod  random.f90  random.mod  utilsgal.f90  utilsgal.mod  utilsgw.mod  wigner_f90.mod
analytic/mod/: bb_flat.mod
analytic/src/: Makefile  delens.f90  makefile.sh  rec_lens.f90  rec_rot.f90  rec_src.f90  rec_tau.f90
basic/mod/: bstool.mod  cosmofunc.mod  pstool.mod  utilsgal.mod  utilsgw.mod
basic/src/: Makefile  aps.f90  bispec.f90  bstool.f90  cosmofunc.f90  cosmofuncs.f90  delens.f90  flat.f90  galaxy.f90  makefile.sh  utilsGW.f90  utilsMFs.f90  utilsgal.f90
cmblensplus/: __init__.py
cmblensplus/basic/: __init__.py  bispec.py  cosmofuncs.py  delens.py  flat.py  galaxy.py  wigner_funcs.py
cmblensplus/curvedsky/: \.py  __init__.py  bispec.py  cninv.py  delens.py  meson.build  norm_imag.py  norm_quad.py  rec_iamp.py  rec_ilens.py  rec_lens.py  rec_rot.py  rec_src.py  rec_tau.py  setup.py  utils.py
cmblensplus/curvedsky/_core/: cgd.py  lib_bispec.py  lib_cninv.py  lib_delens.py  lib_rec_iamp.py  lib_rec_ilens.py  lib_rec_lens.py  lib_rec_tau.py  lib_utils.py  qe_lens.py  sht_ducc0.py  utils.py
cmblensplus/flatsky/: __init__.py  bispec.py  ffttools.py  meson.build  norm_kxs.py  norm_kxt.py  norm_lens.py  norm_rot.py  norm_src.py  norm_tau.py  rec_lens.py  rec_rot.py  rec_src.py  rec_tau.py  utils.py
cmblensplus/utils/: __init__.py  analysis.py  binning.py  cmb.py  constant.py  cosmology.py  delens_func.py  meson.build  plottools.py  quad_func.py  reionization.py  sim_takahashi.py
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
curvedsky/mod/: bispec.mod  delens.mod  rec_lens.mod  rec_src.mod  rec_tau.mod  utils.mod
curvedsky/src/: Makefile  bispec.f90  cninv.f90  delens.f90  makefile.sh  norm_imag.f90  norm_lens.f90  norm_quad.f90  norm_rot.f90  norm_src.f90  norm_tau.f90  old.f90  oldcninv.f90  rec_arot.f90  rec_iamp.f90  rec_lens.f90  rec_rot.f90  rec_src.f90  rec_tau.f90  utils.f90
docs/: auto.sh
docs/html/: .buildinfo  genindex.html  index.html  install.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst  install.rst  license.rst
example/asymqe/: lens_al.py  pxa.py
example/basic/: LSS-mass-tracers_aps.ipynb  Untitled.ipynb  wigner3j.ipynb
example/bispec/: bispec.ipynb  bispec.py  bispectrum_plots_Aleksandr_Bowkis.ipynb  run_analytic_bispec.ipynb  run_analytic_bispec.py
example/bispectrum/: curvedsky_bispectrum.ipynb  flatsky_bispectrum.ipynb  run_analytic_bispec.ipynb
example/cmblens/: lens_al.py  lens_mean.py  lens_qrec.py  lens_rdn0.py  lens_reconstruction.ipynb  rot_al.py  rot_qrec.py
example/curvedsky_reconstruction/: bias-hardened-N0.ipynb  bias-hardened-estimator.ipynb  bias-hardened_response.ipynb  bias-hardened_tau.ipynb  biref_bias-hardening.ipynb  biref_forecast-for-cmb-hd.ipynb  biref_forecast.ipynb  biref_norm.ipynb  biref_reconstruction.ipynb  cosmic-birefringence_bias-hardening.ipynb  iamp_reconstruction.ipynb  ilens_forecast.ipynb  ilens_reconstruction.ipynb  lens_EB-iter-forecast.ipynb  lens_EB-iter-forecast_LB.ipynb  lens_forecast.ipynb  lens_forecast_CMB-noise-dep.ipynb  lens_forecast_LBnew.ipynb  lens_forecast_ground.ipynb  lens_normalization-test.ipynb  lens_reconstruction.ipynb  lens_reconstruction.py  lens_reconstruction_CMB-noise-dep.ipynb  lens_reconstruction_EB-iter.py  lens_reconstruction_src-hardened.ipynb  patchy-tau-reconstruction.ipynb  quad_func.ipynb  quad_func_N0.ipynb  quad_func_norm.ipynb  tau-forecast.ipynb  tau-reconstruction.ipynb  tau_norm.ipynb  tau_reconstruction.ipynb
example/curvedsky_utils/: apodization.ipynb  cinv_cmb.ipynb  cinv_cmb_sat+lat.ipynb  cinv_cmb_sat+lat.py  cinv_kappa.ipynb  (+11 more)
fortran_wrapped/src_basic/: bispec.f90  bispec.src  cosmofuncs.f90  cosmofuncs.src  delens.f90  delens.src  flat.f90  flat.src  galaxy.f90  galaxy.src  meson.build  wigner_funcs.f90
fortran_wrapped/src_curvedsky/: .delens.src.un~  bispec.f90  bispec.src  cninv.f90  cninv.src  delens.f90  delens.src  meson.build  norm_imag.f90  norm_imag.src  norm_quad.f90  norm_quad.src  rec_iamp.f90  rec_ilens.f90  rec_lens.f90  rec_rot.f90  rec_src.f90  rec_tau.f90  utils.f90  utils.src
fortran_wrapped/src_flatsky/: bispec.f90  delens.src  ffttools.src  meson.build  norm_kxs.f90  norm_kxt.f90  norm_lens.f90  norm_lens.src  norm_rot.f90  norm_rot.src  norm_src.f90  norm_tau.f90  rec_lens.f90  rec_lens.src  rec_rot.f90  rec_rot.src  rec_src.f90  rec_tau.f90  utils.f90  utils.src
py/: docstr.py  f2pysig.py
scripts/: create_interface.sh  f2pysig.py  generate_docstring.py
sh/: compile.sh  pyversion.sh  setup.sh
src/cmblensplus/curvedsky/: delens.py  meson.build  norm_quad.py  rec_iamp.py  rec_ilens.py  rec_rot.py  rec_src.py  utils.py
src/cmblensplus/curvedsky/_core/: cgd.py  lib_delens.py  lib_rec_lens.py  lib_rec_rot.py  lib_rec_src.py  lib_rec_tau.py
test/: quicktest_basic.py  quicktest_curvedsky.py
utils/: .quadrec.py.swp  analysis.py  binning.py  cmb.py  constant.py  constants.py  cosmology.py  delens_func.py  maptools.py  misctools.py  plottools.py  quad_class.py  quad_func.py  quadrec.py  readparam.py  reionization.py
wrap/: .gitignore
(+1865 files in other folders)
