[build-system]
requires = [
  "meson-python>=0.16",
  "meson>=1.4",
  "ninja",
  "numpy",
]
build-backend = "mesonpy"

[project]
name = "cmblensplus"
version = "0.1.0"
description = "cmblensplus"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Toshiya Namikawa", email = "toshiya.namikawa@ipmu.jp" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "numpy",
  "scipy",
  "ducc0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "ipython",
  "build",
]

[project.urls]
Homepage = "https://github.com/toshiyan/cmblensplus"
Documentation = "https://toshiyan.github.io/clpdoc/html/"


