# cmblensplus/flatsky/meson.build

py.install_sources(
  '__init__.py',
  'utils.py',
  'bispec.py',
  'ffttools.py',
  'rec_lens.py',
  'norm_lens.py',
  'rec_rot.py',
  'norm_rot.py',
  'rec_tau.py',
  'norm_tau.py',
  'rec_src.py',
  'norm_src.py',
  'norm_kxt.py',
  'norm_kxs.py',
  subdir: 'cmblensplus/flatsky',
)
