py.install_sources(
  [
    '__init__.py',
    'analysis.py',
    'binning.py',
    'cmb.py',
    'constant.py',
    'cosmology.py',
    'delens_func.py',
    'maptools.py',
    'misctools.py',
    'quad_func.py',
    'plottools.py',
    'reionization.py',
    'sim_takahashi.py',
  ],
  subdir: 'cmblensplus/utils',
)