# Build the f2py extension module

# Name of the Python extension module.
curvedsky_module_name = 'libcurvedsky'

# Base names of .src files in this directory.
curvedsky_src_names = [ 'utils', 'norm_quad', 'norm_imag' ]

# ---------------------------------------------------------------------------
# Step 1: .src -> .f90
# ---------------------------------------------------------------------------

curvedsky_generated_f90 = []

foreach name : curvedsky_src_names
  curvedsky_generated_f90 += custom_target(
    'curvedsky_' + name + '_generated_f90',
    # Input file
    input: name + '.src',
    # Output file in the build directory
    output: name + '.f90',
    # Run:
    #   python scripts/f2pysig.py -srcname <input> -o <output>
    command: [
      py,
      f2pysig,
      '-srcname', '@INPUT@',
      '-o', '@OUTPUT@',
    ],
    # Build internal utility library first.
    depends: [
      utils_lib_target,
    ],
  )
endforeach


# ---------------------------------------------------------------------------
# Step 2: generated .f90 -> f2py C/F90 wrapper sources
# ---------------------------------------------------------------------------

curvedsky_f2py_wrappers = custom_target(
  'curvedsky_f2py_wrappers',
  input: curvedsky_generated_f90,
  output: [
    curvedsky_module_name + 'module.c',
    curvedsky_module_name + '-f2pywrappers2.f90',
  ],
  command: [
    py,
    '-m', 'numpy.f2py',
    '--lower',
    '-m', curvedsky_module_name,
    '@INPUT@',
    '--build-dir', '@OUTDIR@',
  ],
  depends: [
    utils_lib_target,
  ],
)

# ---------------------------------------------------------------------------
# Step 3: build Python extension module
# ---------------------------------------------------------------------------

py.extension_module(
  curvedsky_module_name,
  # Sources for the extension:
  [
    curvedsky_f2py_wrappers,
    curvedsky_generated_f90,
    numpy_f2py_src / 'fortranobject.c',
  ],
  subdir: 'cmblensplus/curvedsky/',

  include_directories: [
    inc_fortran_internal,
  ],

  dependencies: [
    numpy_dep,
  ],

  # Link to fortran_internal libs generated by the top-level custom_target().
  link_args: [
    utils_lib_path,
  ],

  # Make sure libXXX.a exists before linking.
  link_depends: [
    utils_lib_target,
  ],

  # Optimization flags for Fortran compilation.
  fortran_args: [
    '-O3',
  ],

  # Install the extension into site-packages.
  install: true,
)

