# Build the f2py extension module:
#   libflatsky
#
# This file is read from the top-level meson.build via:
#   subdir('fortran_wrapped/src_flatsky')
#
# Variables assumed to be defined in the top-level meson.build:
#   py
#   f2pysig
#   numpy_f2py_src
#   inc_numpy
#   inc_fortran_internal
#   utils_lib_target
#   utils_lib_path


# Name of the Python extension module.
# This preserves the old import style:
#   import libflatsky
flatsky_module_name = 'libflatsky'


# Base names of .src files in this directory.
# These correspond to:
#   <name>.src -> generated <name>.f90
#
# Use the names actually present in:
#   fortran_wrapped/src_flatsky/
flatsky_src_names = [
  'utils',
  'bispec',
  'rec_lens',
  'norm_lens',
  'rec_rot',
  'norm_rot',
  'rec_tau',
  'norm_tau',
  'rec_src',
  'norm_src',
  'norm_kxt',
  'norm_kxs',
]


# Convert each .src file into a generated .f90 file.
#
# The generated .f90 files are written into Meson's build directory,
# not into the source tree.
flatsky_generated_f90 = []

foreach name : flatsky_src_names
  flatsky_generated_f90 += custom_target(
    'flatsky_' + name + '_generated_f90',

    # Input file, for example:
    #   rec_lens.src
    input: name + '.src',

    # Output file in the build directory, for example:
    #   rec_lens.f90
    output: name + '.f90',

    # Run:
    #   python scripts/f2pysig.py -srcname <input> -o <output>
    command: [
      py,
      f2pysig,
      '-srcname', '@INPUT@',
      '-o', '@OUTPUT@',
    ],

    # Build internal utility library first.
    # This is needed if the wrapper Fortran files use modules from
    # fortran_internal/mod.
    depends: [
      utils_lib_target,
    ],
  )
endforeach


# Build the Python extension module.
#
# This creates something like:
#   libflatsky.cpython-314t-x86_64-linux-gnu.so
#
# It can be imported as:
#   import libflatsky
py.extension_module(
  flatsky_module_name,

  # Sources for the extension:
  #   1. generated Fortran files from .src
  #   2. NumPy f2py runtime C source
  [
    flatsky_generated_f90,
    numpy_f2py_src / 'fortranobject.c',
  ],

  # Include directories:
  #   inc_numpy:
  #     NumPy headers and f2py headers
  #
  #   inc_fortran_internal:
  #     Fortran .mod files from fortran_internal/mod
  include_directories: [
    inc_fortran_internal,
  ],

  dependencies: [
    numpy_dep,
  ],

  # Link to libutils.a generated by the top-level custom_target().
  #
  # This is a minimal starting point. If flatsky also needs libdft.a,
  # FFTW, cfitsio, or other libraries, add them here later.
  link_args: [
    utils_lib_path,
  ],

  # Make sure libutils.a exists before linking.
  link_depends: [
    utils_lib_target,
  ],

  # Optimization flags for Fortran compilation.
  fortran_args: [
    '-O3',
  ],

  # Install the extension into site-packages.
  install: true,
)