# Build the f2py extension module

# Name of the Python extension module.
flatsky_module_name = 'libflatsky'

# Base names of .src files in this directory.
flatsky_src_names = [ 'utils', 'bispec', 'rec_lens', 'norm_lens', 'rec_rot', 'norm_rot', 'rec_tau', 'norm_tau', 'rec_src', 'norm_src', 'norm_kxt', 'norm_kxs', ]

# ---------------------------------------------------------------------------
# Step 1: .src -> .f90
# ---------------------------------------------------------------------------

flatsky_generated_f90 = []

foreach name : flatsky_src_names
  flatsky_generated_f90 += custom_target(
    'flatsky_' + name + '_generated_f90',
    # Input file
    input: name + '.src',
    # Output file in the build directory
    output: name + '.f90',
    # Run:
    #   python scripts/f2pysig.py -srcname <input> -o <output>
    command: [
      py,
      f2pysig,
      '-srcname', '@INPUT@',
      '-o', '@OUTPUT@',
    ],
    # Build internal utility library first.
    depends: [
      dft_lib_target,
      utils_lib_target,
    ],
  )
endforeach


# ---------------------------------------------------------------------------
# Step 2: generated .f90 -> f2py C/F90 wrapper sources
# ---------------------------------------------------------------------------

flatsky_f2py_wrappers = custom_target(
  'flatsky_f2py_wrappers',
  input: flatsky_generated_f90,
  output: [
    'flatskymodule.c',
    'flatsky-f2pywrappers2.f90',
  ],
  command: [
    py,
    '-m', 'numpy.f2py',
    '--lower',
    '-m', flatsky_module_name,
    '@INPUT@',
    '--build-dir', '@OUTDIR@',
  ],
  depends: [
    dft_lib_target,
    utils_lib_target,
  ],
)

# ---------------------------------------------------------------------------
# Step 3: build Python extension module
# ---------------------------------------------------------------------------

py.extension_module(
  flatsky_module_name,
  # Sources for the extension:
  [
    flatsky_f2py_wrappers,
    flatsky_generated_f90,
    numpy_f2py_src / 'fortranobject.c',
  ],
  subdir: 'cmblensplus/flatsky/',

  include_directories: [
    inc_fortran_internal,
  ],

  dependencies: [
    numpy_dep,
    fftw_dep,
  ],

  # Link to fortran_internal libs generated by the top-level custom_target().
  link_args: [
    dft_lib_path,
    utils_lib_path,
  ],

  # Make sure libXXX.a exists before linking.
  link_depends: [
    dft_lib_target,
    utils_lib_target,
  ],

  # Optimization flags for Fortran compilation.
  fortran_args: [
    '-O3',
  ],

  # Install the extension into site-packages.
  install: true,
)

